Tableview populated from Firebase

--- a/StudentsRegistration/Base.lproj/Main.storyboard
+++ b/StudentsRegistration/Base.lproj/Main.storyboard
@@ -81,14 +81,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ltw-dm-l6v">
-                                <rect key="frame" x="20" y="44" width="374" height="769"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ltw-dm-l6v">
+                                <rect key="frame" x="0.0" y="44" width="414" height="808"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="DCx-gc-Uqm">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DCx-gc-Uqm" id="nZS-gM-agh">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ltw-dm-l6v" firstAttribute="centerX" secondItem="bG2-qA-5BO" secondAttribute="centerX" id="D9J-Vx-snh"/>
+                            <constraint firstItem="ltw-dm-l6v" firstAttribute="leading" secondItem="bG2-qA-5BO" secondAttribute="leading" id="EBQ-vo-1nO"/>
+                            <constraint firstItem="ltw-dm-l6v" firstAttribute="top" secondItem="gRn-Pb-fhG" secondAttribute="top" id="gpY-fE-KiB"/>
                             <constraint firstItem="ltw-dm-l6v" firstAttribute="centerY" secondItem="bG2-qA-5BO" secondAttribute="centerY" id="iTt-Vb-b4k"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gRn-Pb-fhG"/>
